[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = {attr = "stp.__version__"}
dependencies = {file = "requirements.txt"}

[tool.setuptools]
packages = ["stp"]
include-package-data = true

[project]
name = "stp-server"
description = "STP: Sitty Talky messaging Protocol : A primitive protocol purely written in python for tinkering with your office mates over LAN!"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "dependencies"]
authors = [
  { name="@bRuttaZz", email="agrajpdasprivate@gmail.com" },
]
keywords = ["stp", "sitty-talky", "sittytalky", 
            "LAN", "Messaging", "protocol"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Unix',        
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Communications :: Chat',
    'Topic :: Internet',
    'Topic :: Software Development',
    'Natural Language :: English',
]

[project.urls]
Homepage = "https://github.com/bRuttaZz/stp"
Issues = "https://github.com/bRuttaZz/stp/issues"
Repository = "https://github.com/bRuttaZz/stp.git"


